# refined

./: .gitignore  .python-version  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  requirements-build.txt  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
.github/workflows/: main-build.yml
pyrefined/: main.py
pyrefined/predicates/: string.py
refined/: __init__.py  decorator.py  main.py  refinement_types.py
refined/predicates/: __init__.py  base.py  collection.py  common.py  generic.py  numeric.py  string.py
tests/: test_main.py  test_predicates_collection.py  test_predicates_numeric.py  test_predicates_string.py  utils.py
