[metadata]
name = refined
version = 0.0.1
author = Quino Terrasa and collaborators
author_email = quino.terrasa+refined@gmail.com
url = https://github.com/espetro/refined
description = Refinement type hints for Python
classifiers =
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9
  Programming Language :: Python :: 3.10

[options]
packages = find:
python_requires = >= 3.7

[options.packages.find]
exclude =
  tests
